--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,18 @@
       "type": "image/png"
     },
     {
+      "src": "icons/icon-192-maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/icon-512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
       "src": "icons/icon-192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
