feat: add build and lint scripts, improve code structure and organization
- Added build and development scripts using esbuild to package the application.
- Introduced ESLint and Prettier for code quality and formatting.
- Refactored script.js to remove unused imports and variables, and improve readability.
- Enhanced audio.js with comments for better understanding of the code flow.
- Updated service worker to cache additional ES module entrypoints for offline support.
- Created a new ui.js module for UI-related functions, improving modularity.
- Added ESLint and Prettier configuration files for consistent code style.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "build": "esbuild script.js --bundle --outfile=dist/script.js --minify --sourcemap",
+    "dev:build": "esbuild script.js --bundle --outfile=dist/script.js --sourcemap --watch",
+    "lint": "eslint --ext .js --fix ."
+  },
+  "vitest": {
+    "test": {
+      "environment": "jsdom"
+    }
   },
   "devDependencies": {
     "vitest": "^1.0.0",
     "jsdom": "^21.1.0",
-    "@testing-library/dom": "^8.0.0"
+    "@testing-library/dom": "^8.0.0",
+    "esbuild": "^0.18.0",
+    "eslint": "^8.0.0",
+    "prettier": "^2.0.0"
   }
 }
